--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -193,18 +193,22 @@ input[type=submit]:hover {
     border: 1px solid #53af57;
 }
 
-table{
-  border:1px solid black;
-  width: 80%;
-  margin-left: auto;
+table {
+  border: 1px solid black;
+  background-color: white;
   margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-left: auto;
+  border-collapse: collapse;
+  margin-top: 30px;
+  width: 50%;
 }
 
-th, td {
-    border:1px solid black;
+th, td, tr {
+    text-align: center;
+    padding: 10px;
+    border: 2px solid black;
 }
+
 .box {
   border: 1px solid #c4c4c4;
   padding: 30px 25px 10px 25px;
