ajout form login et menu

--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -251,7 +251,7 @@ h1.box-title {
 }
 .box-input {
   font-size: 14px;
-  background: #fff;
+  background: black;
   border: 1px solid #ddd;
   margin-bottom: 25px;
   padding-left:10px;
