--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -151,7 +151,8 @@ footer{
 #slider:hover #precedent,
 #slider:hover #suivant {
     opacity: 1;
-}.nav-link {
+}
+.nav-link {
 
 }
 form {
@@ -193,14 +194,24 @@ input[type=submit]:hover {
     border: 1px solid #53af57;
 }
 
+#rechercheBien {
+    border: 1px solid black;
+    background-color: white;
+    margin-right: auto;
+    margin-left: auto;
+    border-collapse: collapse;
+    margin-top: 30px;
+    width: 40%;
+}
+
 table {
-  border: 1px solid black;
-  background-color: white;
-  margin-right: auto;
-  margin-left: auto;
-  border-collapse: collapse;
-  margin-top: 30px;
-  width: 50%;
+    border: 1px solid black;
+    background-color: white;
+    margin-right: auto;
+    margin-left: auto;
+    border-collapse: collapse;
+    margin-top: 30px;
+    width: 50%;
 }
 
 th, td, tr {
@@ -210,70 +221,70 @@ th, td, tr {
 }
 
 .box {
-  border: 1px solid #c4c4c4;
-  padding: 30px 25px 10px 25px;
-  background: white;
-  margin: 30px auto;
-  width: 360px;
+    border: 1px solid #c4c4c4;
+    padding: 30px 25px 10px 25px;
+    background: white;
+    margin: 30px auto;
+    width: 360px;
 }
 h1.box-logo a {
-  text-decoration:none;
+    text-decoration:none;
 }
 h1.box-title {
-  color: #AEAEAE;
-  background: #f8f8f8;
-  font-weight: 300;
-  padding: 15px 25px;
-  line-height: 30px;
-  font-size: 25px;
-  text-align:center;
-  margin: -27px -26px 26px;
+    color: #AEAEAE;
+    background: #f8f8f8;
+    font-weight: 300;
+    padding: 15px 25px;
+    line-height: 30px;
+    font-size: 25px;
+    text-align:center;
+    margin: -27px -26px 26px;
 }
 .box-button {
-  border-radius: 5px;
-  background: #d2483c;
-  text-align: center;
-  cursor: pointer;
-  font-size: 19px;
-  width: 100%;
-  height: 51px;
-  padding: 0;
-  color: #fff;
-  border: 0;
-  outline:0;
+    border-radius: 5px;
+    background: #d2483c;
+    text-align: center;
+    cursor: pointer;
+    font-size: 19px;
+    width: 100%;
+    height: 51px;
+    padding: 0;
+    color: #fff;
+    border: 0;
+    outline:0;
 }
 .box-register
 {
-  text-align:center;
-  margin-bottom:0px;
+    text-align:center;
+    margin-bottom:0px;
 }
 .box-register a
 {
-  text-decoration:none;
-  font-size:12px;
-  color:#666;
+    text-decoration:none;
+    font-size:12px;
+    color:#666;
 }
 .box-input {
-  font-size: 14px;
-  background: black;
-  border: 1px solid #ddd;
-  margin-bottom: 25px;
-  padding-left:10px;
-  border-radius: 5px;
-  width: 347px;
-  height: 50px;
+    font-size: 14px;
+    background: black;
+    border: 1px solid #ddd;
+    margin-bottom: 25px;
+    padding-left:10px;
+    border-radius: 5px;
+    width: 347px;
+    height: 50px;
 }
 .box-input:focus {
     outline: none;
     border-color:#5c7186;
 }
 .sucess{
-  text-align: center;
-  color: white;
+    text-align: center;
+    color: white;
 }
 .sucess a {
-  text-decoration: none;
-  color: #58aef7;
+    text-decoration: none;
+    color: #58aef7;
 }
 p.errorMessage {
     background-color: #e66262;
@@ -281,4 +292,8 @@ p.errorMessage {
     padding: 5px 10px;
     color: #FFFFFF;
     border-radius: 3px;
+}
+
+footer {
+    text-align: center;
 }
