--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -266,7 +266,7 @@ h1.box-title {
 }
 .box-input {
     font-size: 14px;
-    background: black;
+    background: white;
     border: 1px solid #ddd;
     margin-bottom: 25px;
     padding-left:10px;
