--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -93,7 +93,7 @@ li, a ,button{
 }
 
 footer{
-    position: relative;
+    position: absolute;
     bottom : 0 ;
     align-items: center;
     padding: 10px ;
