--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -301,3 +301,23 @@ footer {
     padding: 20px;
 }
 */
+header {
+    background-color: #24252a;
+    width: 100%;
+    height: 20%;
+    align-items: center;
+}
+
+.img-header {
+    margin-left: 30%;
+    margin-right: 20%;
+    width: 10%;
+    height: auto;
+    margin-top: 15px;
+}
+
+
+.link-header{
+    color: white;
+    
+}
