--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -303,21 +303,21 @@ footer {
 */
 header {
     background-color: #24252a;
-    width: 100%;
-    height: 20%;
+    display: flex;
     align-items: center;
 }
 
 .img-header {
-    margin-left: 30%;
+    margin-left: 20px;
     margin-right: 20%;
-    width: 10%;
+    width: 40%;
     height: auto;
-    margin-top: 15px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 
 .link-header{
     color: white;
-    
+    margin-right: 15%;
 }
