--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -173,6 +173,17 @@ input[type=submit]:hover {
     width: 40%;
 }
 
+#triBien {
+    border: 1px solid black;
+    background-color: white;
+    margin-right: auto;
+    margin-left: auto;
+    padding-top: 30px;
+    border-collapse: collapse;
+    margin-top: 30px;
+    width: 40%;
+}
+
 table {
     border: 1px solid black;
     background-color: white;
