--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -173,7 +173,7 @@ input[type=submit]:hover {
     width: 40%;
 }
 
-#triBien {
+#formTri {
     border: 1px solid black;
     background-color: white;
     margin-right: auto;
