--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -55,8 +55,14 @@ li, a, button {
     color: black;
     text-decoration: none;
 }
+.navbar a,.navbar a:hover, .navbar a:focus
+{
+color: white;
+}
 
-
+.navbar ul.dropdown-menu{
+    color:black;
+}
 .cont_liste {
     background-color: #edf0f1;
     display: flex;
