--- a/css/cssimmo.css
+++ b/css/cssimmo.css
@@ -161,7 +161,7 @@ input[type=text], input[type=password] {
 }
 
 
-input[type=submit] {
+input[type=submit], button{
     background-color: #53af57;
     color: white;
     padding: 14px 20px;
